--- a/RecipeBox/Views/Tags/Delete.cshtml
+++ b/RecipeBox/Views/Tags/Delete.cshtml
@@ -2,11 +2,11 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Category
+@model RecipeBox.Models.Tag
 
 <h2>Are you sure you want to delete this?</h2>
 
-@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
+@Html.DisplayNameFor(model => model.TagName): @Html.DisplayFor(model => model.TagName)
 @using (Html.BeginForm())
 {
     <input type="submit" value="Delete" />
