--- a/RecipeBox/Views/Tags/Details.cshtml
+++ b/RecipeBox/Views/Tags/Details.cshtml
@@ -2,27 +2,27 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Category;
+@model RecipeBox.Models.Tag
 
-<h2>Category Details</h2>
+<h2>Tag Details</h2>
 <hr />
-<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
+<h3>@Html.DisplayNameFor(model => model.TagName): @Html.DisplayFor(model => model.TagName)</h3>
 
-@if(@Model.Items.Count == 0)
+@if(@Model.Recipies.Count == 0)
 {
-  <p>This category does not contain any items</p>
+  <p>This Tag does not contain any items</p>
 }
 else
 {
-  <h4>Items the category contains:</h4>
+  <h4>Items the Tag contains:</h4>
   <ul>
-  @foreach(var join in Model.Items)
+  @foreach(var join in Model.Recipies)
   {
-    <li>@join.Item.Description</li>
+    <li>@join.Recipe.RecipeName</li>
   }
   </ul>
 }
 
 <p>@Html.ActionLink("Back to categories", "Index")</p>
-<p>@Html.ActionLink("Edit Category", "Edit", new { id = Model.CategoryId })</p>
-<p>@Html.ActionLink("Delete Category", "Delete", new { id = Model.CategoryId })</p>
+<p>@Html.ActionLink("Edit Tag", "Edit", new { id = Model.TagId })</p>
+<p>@Html.ActionLink("Delete Tag", "Delete", new { id = Model.TagId })</p>
