--- a/RecipeBox/Views/Tags/Index.cshtml
+++ b/RecipeBox/Views/Tags/Index.cshtml
@@ -2,21 +2,21 @@
   Layout = "_Layout";
 }
 
-@using ToDoList.Models;
-@model List<ToDoList.Models.Category>;
+@using RecipeBox.Models;
+@model List<RecipeBox.Models.Tag>;
 
-<h1>Categories</h1>
+<h1>Tags</h1>
 
 @if (@Model.Count == 0)
 {
-  <h3>No categories have been added yet!</h3>
+  <h3>No tags have been added yet!</h3>
 } 
 
-@foreach (Category category in Model)
+@foreach (Tag Tag in Model)
 {
-  <li>@Html.ActionLink($"{category.Name}", "Details", new { id = category.CategoryId })</li>
+  <li>@Html.ActionLink($"{Tag.TagName}", "Details", new { id = Tag.TagId })</li>
 }
 
-<p>@Html.ActionLink("Add new category", "Create")</p>
+<p>@Html.ActionLink("Add new Tag", "Create")</p>
 
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
