add db migration
co-authored-by: Emme Buentiempo <emmettbuentiempo@gmail.com>

--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <h1>Welcome to the Recipe BOx!</h1>
-<p>@Html.ActionLink("See all categories", "Index", "Categories")</p>
-<p>@Html.ActionLink("See all items", "Index", "Items")</p>
+<p>@Html.ActionLink("See all tags", "Index", "Tags")</p>
+<p>@Html.ActionLink("See all recipies", "Index", "Recipies")</p>
 <p>@Html.ActionLink("Create an account", "Index", "Account")</p>
